Updating README.md, contact.html and price.html

--- a/contact.html
+++ b/contact.html
@@ -65,11 +65,11 @@
 
 <section class="footer">
 
-    <div class="box-container">
+    <div class="bogitx-container">
 
         <div class="box">
             <h3>about us</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, maxime!</p>
+            <p>World class education on the go</p>
         </div>
 
         <div class="box">
