--- a/price.html
+++ b/price.html
@@ -89,7 +89,7 @@
 
         <div class="box">
             <h3>about us</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, maxime!</p>
+            <p>World class education on the go</p>
         </div>
 
         <div class="box">
